# create_and_verify_account

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  main.py
app/blueprints/users/: controllers.py  models.py  routes.py  schemas.py
app/blueprints/users/services/: user_service.py
app/configs/: config.py
app/extensions/: database.py  logger.py
app/middlewares/: auth.py  error_handler.py
app/models/: user.py
app/routers/: user.py
app/services/: user.py
app/tests/: test_user_api.py
app/utils/: db.py  validators.py
docs/: account_api_spec.yaml  login_api_spec.yaml  register_account_api_spec.yaml
